samples/_failures_safe/1761594323_57f9f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1cf8a46.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_d1cf8a46.c:132:21: error: expected ‘)’ at end of input
  132 |         strncpy(logs
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_d1cf8a46.c:132:9: error: too few arguments to function ‘strncpy’
  132 |         strncpy(logs
      |         ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_d1cf8a46.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_d1cf8a46.c:132:9: error: expected declaration or statement at end of input
  132 |         strncpy(logs
      |         ^~~~~~~
./samples/SAFE/__tmp_d1cf8a46.c:132:9: error: expected declaration or statement at end of input
